--- a/src/e_cidadania/apps/news/locale/es_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/news/locale/es_ES/LC_MESSAGES/django.po
@@ -2,141 +2,147 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-07-26 17:46+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2011-07-27 11:30\n"
+"Last-Translator:   <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
+"X-Translated-Using: django-rosetta 0.6.0\n"
 
 #: admin.py:38
 msgid "Other data"
-msgstr ""
+msgstr "Otros datos"
 
 #: models.py:35 templates/news/post_add.html:33
 #: templates/news/post_add.html.py:77 templates/news/post_edit.html:27
 msgid "Title"
-msgstr ""
+msgstr "Título"
 
 #: models.py:36 templates/news/post_add.html:40
 #: templates/news/post_add.html.py:78 templates/news/post_edit.html:34
 msgid "Text"
-msgstr ""
+msgstr "Texto"
 
 #: models.py:37
 msgid "Date"
-msgstr ""
+msgstr "Fecha"
 
 #: models.py:38
 msgid "Last update"
-msgstr ""
+msgstr "Última actualización"
 
 #: models.py:39 templates/news/post_edit.html:56
 msgid "Author"
-msgstr ""
+msgstr "Autor"
 
 #: models.py:41 templates/news/post_add.html:55
 #: templates/news/post_edit.html:49
 msgid "Publish in index page"
-msgstr ""
+msgstr "Publicar en la página principal"
 
 #: models.py:42
 msgid "Publish in"
-msgstr ""
+msgstr "Publicar en"
 
 #: models.py:44
 msgid "If you want to post to the index leave this blank"
-msgstr ""
+msgstr "Si quieres publicar en la página principal deja esto en blanco."
 
 #: templates/news/news_list.html:4
 msgid "News list"
-msgstr ""
+msgstr "Archivo de noticias"
 
 #: templates/news/news_list.html:12
 msgid "News archive"
-msgstr ""
+msgstr "Archivo de noticias"
 
 #: templates/news/news_list.html:28
 msgid "There are no posts in this space."
-msgstr ""
+msgstr "No existen entradas en este espacio."
 
 #: templates/news/news_list.html:31 templates/news/post_add.html:65
 #: templates/news/post_confirm_delete.html:25 templates/news/post_edit.html:71
 msgid "Go back"
-msgstr ""
+msgstr "Volver"
 
 #: templates/news/post_add.html:5 templates/news/post_add.html.py:23
 msgid "Add new post"
-msgstr ""
+msgstr "Añadir nueva entrada"
 
 #: templates/news/post_add.html:48 templates/news/post_add.html.py:79
 #: templates/news/post_edit.html:42
 msgid "Tags"
-msgstr ""
+msgstr "Etiquetas"
 
 #: templates/news/post_add.html:63 templates/news/post_edit.html:70
 msgid "Create"
-msgstr ""
+msgstr "Crear"
 
 #: templates/news/post_add.html:75
 msgid "How to add new posts"
-msgstr ""
+msgstr "Cómo añadir nuevas entradas"
 
 #: templates/news/post_add.html:77
 msgid "An spectacular title! (100 characters)"
-msgstr ""
+msgstr "¡Un título espectacular! (100 caracteres)"
 
 #: templates/news/post_add.html:78
 msgid "Your story."
-msgstr ""
+msgstr "Tu historia."
 
 #: templates/news/post_add.html:79
 msgid "Please use them carefully, you are limited to 4 tags."
-msgstr ""
+msgstr "Por favor, úsalas con cuidado, estás limitado a 4 etiquetas."
 
 #: templates/news/post_add.html:80
 msgid "Publish in index"
-msgstr ""
+msgstr "Publicar en la página principal"
 
 #: templates/news/post_add.html:80
 msgid ""
-"If you mark this, the post will appear in the spaces index page AND in the "
-"main index."
+"If you mark this, the post will appear in the spaces index page AND in "
+"the main index."
 msgstr ""
+"Si marcas esta opción, la entrada aparecerá en la página principal Y "
+"en el espacio."
 
 #: templates/news/post_confirm_delete.html:4
 msgid "Delete news"
-msgstr ""
+msgstr "Eliminar noticias"
 
 #: templates/news/post_confirm_delete.html:22
 msgid ""
-"Are you sure you want to delete this post? This action cannot be undone."
+"Are you sure you want to delete this post? This action cannot be "
+"undone."
 msgstr ""
+"¿Estás seguro de querer eliminar esta entrada? Esta acción no se puede"
+" deshacer."
 
 #: templates/news/post_confirm_delete.html:24
 msgid "Delete"
-msgstr ""
+msgstr "Eliminar"
 
 #: templates/news/post_detail.html:33
 msgid "Written by"
-msgstr ""
+msgstr "Escrito por"
 
 #: templates/news/post_detail.html:33
 msgid "on"
-msgstr ""
+msgstr "el"
 
 #: templates/news/post_edit.html:5
 msgid "Edit news"
-msgstr ""
+msgstr "Editar noticias"
 
 #: templates/news/post_edit.html:63
 msgid "Publish in space"
-msgstr ""
+msgstr "Publicar en espacio"
