--- a/src/e_cidadania/apps/proposals/locale/es_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/proposals/locale/es_ES/LC_MESSAGES/django.po
@@ -2,93 +2,94 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-07-26 17:46+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2011-07-27 11:41\n"
+"Last-Translator:   <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
+"X-Translated-Using: django-rosetta 0.6.0\n"
 
 #: admin.py:45
 msgid "Location"
-msgstr ""
+msgstr "Localización"
 
 #: admin.py:48
 msgid "Relations"
-msgstr ""
+msgstr "Relaciones"
 
 #: admin.py:51
 msgid "Other"
-msgstr ""
+msgstr "Otros"
 
 #: admin.py:54
 msgid "Options"
-msgstr ""
+msgstr "Opciones"
 
 #: models.py:37
 msgid "Economically not viable"
-msgstr ""
+msgstr "Económicamente no viable"
 
 #: models.py:38
 msgid "Legally not viable"
-msgstr ""
+msgstr "Legalmente no viable"
 
 #: models.py:39
 msgid "Technically not viable"
-msgstr ""
+msgstr "Técnicamente no viable"
 
 #: models.py:40
 msgid "Offtopic"
-msgstr ""
+msgstr "Fuera de tópico"
 
 #: models.py:48 models.py:81 templates/proposals/proposal_add.html:21
 #: templates/proposals/proposal_add.html:72
 #: templates/proposals/proposal_edit.html:27
 msgid "Title"
-msgstr ""
+msgstr "Título"
 
 #: models.py:79
 msgid "Code"
-msgstr ""
+msgstr "Código"
 
 #: models.py:82 templates/proposals/proposal_add.html:28
 #: templates/proposals/proposal_add.html:73
 #: templates/proposals/proposal_edit.html:34
 msgid "Description"
-msgstr ""
+msgstr "Descripción"
 
 #: models.py:88 templates/proposals/proposal_add.html:35
 #: templates/proposals/proposal_edit.html:41
 msgid "Latitude"
-msgstr ""
+msgstr "Latitud"
 
 #: models.py:90 templates/proposals/proposal_add.html:41
 #: templates/proposals/proposal_edit.html:47
 msgid "Longitude"
-msgstr ""
+msgstr "Longitud"
 
 #: models.py:115
 msgid "Proposal"
-msgstr ""
+msgstr "Propuesta"
 
 #: models.py:116
 msgid "Proposals"
-msgstr ""
+msgstr "Propuestas"
 
 #: templates/proposals/proposal_add.html:5
 #: templates/proposals/proposal_add.html:13
 #: templates/proposals/proposal_detail.html:17
 #: templates/proposals/proposal_list.html:17
 msgid "Add proposal"
-msgstr ""
+msgstr "Añadir propuesta"
 
 #: templates/proposals/proposal_add.html:35
 #: templates/proposals/proposal_add.html:41
@@ -97,115 +98,126 @@ msgstr ""
 #: templates/proposals/proposal_edit.html:47
 #: templates/proposals/proposal_edit.html:53
 msgid "(optional)"
-msgstr ""
+msgstr "(opcional)"
 
 #: templates/proposals/proposal_add.html:47
 #: templates/proposals/proposal_add.html:75
 #: templates/proposals/proposal_edit.html:53
 msgid "Tags"
-msgstr ""
+msgstr "Etiquetas"
 
 #: templates/proposals/proposal_add.html:57
 #: templates/proposals/proposal_edit.html:64
 msgid "Create"
-msgstr ""
+msgstr "Crear"
 
 #: templates/proposals/proposal_add.html:58
 #: templates/proposals/proposal_confirm_delete.html:23
 #: templates/proposals/proposal_edit.html:65
 msgid "Cancel"
-msgstr ""
+msgstr "Cancelar"
 
 #: templates/proposals/proposal_add.html:67
 msgid "Admins/moderators read this"
-msgstr ""
+msgstr "Administradores/Moderadores leed esto"
 
 #: templates/proposals/proposal_add.html:68
 msgid ""
-"There are a lot more options in the proposals but they will appear only when "
-"you edit the proposal."
+"There are a lot more options in the proposals but they will appear only"
+" when you edit the proposal."
 msgstr ""
+"Existen numerosas opciones más para la propuestas pero sólo se verán "
+"cuando se edite."
 
 #: templates/proposals/proposal_add.html:70
 msgid "How to add new proposals"
-msgstr ""
+msgstr "Cómo añadir nuevas propuestas"
 
 #: templates/proposals/proposal_add.html:72
 msgid "Title resuming the proposal, be concise (50 characters)"
-msgstr ""
+msgstr "Título resumiendo la propuesta (50 caracteres)"
 
 #: templates/proposals/proposal_add.html:73
 msgid ""
-"Describe here your proposal with detail. You can add images or any other "
-"content."
+"Describe here your proposal with detail. You can add images or any "
+"other content."
 msgstr ""
+"Describe aquí tu propuesta con detalle. Puedes utilizar imágenes o "
+"cualquier otro contenido."
 
 #: templates/proposals/proposal_add.html:74
 msgid "Latitude/Longitude"
-msgstr ""
+msgstr "Latitud/Longitud"
 
 #: templates/proposals/proposal_add.html:74
 msgid "You'll have to put this if you want to locate the proposal in a map."
 msgstr ""
+"Tendrás de dar estos datos si quieres geoposicionar la propuesta en un"
+" mapa."
 
 #: templates/proposals/proposal_add.html:75
 msgid ""
-"Relevant tags for the proposal, p.e. where the proposal is localted, what is "
-"related to it, etc."
+"Relevant tags for the proposal, p.e. where the proposal is localted, "
+"what is related to it, etc."
 msgstr ""
+"Etiquetas relevantes, p.e. dónde es la propuesta, cosas relacionadas. "
+"etc."
 
 #: templates/proposals/proposal_confirm_delete.html:4
 #: templates/proposals/proposal_confirm_delete.html:14
 msgid "Delete proposal"
-msgstr ""
+msgstr "Eliminar propuesta"
 
 #: templates/proposals/proposal_confirm_delete.html:18
 msgid ""
-"Are you sure you want to delete this proposal? This action cannot be undone."
+"Are you sure you want to delete this proposal? This action cannot be "
+"undone."
 msgstr ""
+"¿Estás seguro de querer eliminar esta propuesta? Esta acción no se "
+"puede deshacer."
 
 #: templates/proposals/proposal_confirm_delete.html:22
 #: templates/proposals/proposal_detail.html:22
 #: templates/proposals/proposal_list.html:22
 msgid "Delete"
-msgstr ""
+msgstr "Eliminar"
 
 #: templates/proposals/proposal_detail.html:5
 msgid "View proposal"
-msgstr ""
+msgstr "Ver propuesta"
 
 #: templates/proposals/proposal_detail.html:19
 #: templates/proposals/proposal_list.html:19
 msgid "Edit"
-msgstr ""
+msgstr "Editar"
 
 #: templates/proposals/proposal_detail.html:33
 #: templates/proposals/proposal_list.html:34
 msgid "proposed by "
-msgstr ""
+msgstr "propuesto por"
 
 #: templates/proposals/proposal_detail.html:33
 #: templates/proposals/proposal_list.html:34
 msgid " at "
-msgstr ""
+msgstr "a las"
 
 #: templates/proposals/proposal_edit.html:5
 #: templates/proposals/proposal_edit.html:13
 msgid "Edit proposal"
-msgstr ""
+msgstr "Editar propuesta"
 
 #: templates/proposals/proposal_list.html:5
 msgid "View proposals"
-msgstr ""
+msgstr "Ver propuestas"
 
 #: templates/proposals/proposal_list.html:34
 msgid "comments"
-msgstr ""
+msgstr "comentarios"
 
 #: templates/proposals/proposal_list.html:43
 msgid "There are no proposals for this space."
-msgstr ""
+msgstr "No existen propuestas para este espacio."
 
 #: templates/proposals/proposal_list.html:49
 msgid "Go back"
-msgstr ""
+msgstr "Volver"
